# KrishiConnect

./: .replit  base.html  db.sqlite3  health_check.py  index.html  pyproject.toml  redirect_app.py  server.py
attached_assets/: Pasted-Yessss-got-ittt-Haani-Let-s-take-your-KrishiConnect-idea-and-dress-it-up-in-the-same-power-1744231897310.txt
buyers/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
dashboard/: __init__.py  admin.py  models.py  urls.py  views.py
farmers/: __init__.py  apps.py  auth.py  models.py  serializers.py  urls.py  utils.py  views.py
krishiconnect/: __init__.py  asgi.py  context_processors.py  firebase_config.py  settings.py  urls.py  wsgi.py
products/: __init__.py  models.py  serializers.py  urls.py  views.py
static/css/: chatbot.css  main.css
static/js/: chatbot.js  firebase-auth.js  main.js
staticfiles/: index.html
staticfiles/css/: main.css
staticfiles/js/: firebase-auth.js  main.js  maps.js
templates/: about.html  base.html  contact.html  farming_guide.html  home.html  market_trends.html  privacy_policy.html  terms_conditions.html
templates/buyers/: browse_products.html  dashboard.html  login.html  register.html
templates/dashboard/: admin_dashboard.html
templates/farmers/: add_product.html  dashboard.html  login.html  register.html
